--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -8,6 +8,14 @@
 <body>
     <h1>Add a todo item</h1>
 
-    
+    <form method="post" action="add">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <div>
+            <p>
+                <button type="submit">Add Item</button>
+            </p>
+        </div>
+    </form>
 </body>
 </html>
